# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.7529 ┆ 0.6577 ┆ … ┆ 0.9344 ┆ 0.8224 ┆ 0.6325 ┆ 1.0967 │
  │ 2   ┆ 0.7529 ┆ 0.0    ┆ 0.7303 ┆ … ┆ 1.0541 ┆ 0.6667 ┆ 0.7928 ┆ 0.6387 │
  │ 3   ┆ 0.6577 ┆ 0.7303 ┆ 0.0    ┆ … ┆ 0.6424 ┆ 0.5578 ┆ 1.0142 ┆ 1.0377 │
  │ 4   ┆ 0.6325 ┆ 1.0377 ┆ 0.8228 ┆ … ┆ 1.1952 ┆ 0.767  ┆ 0.866  ┆ 1.4142 │
  │ 5   ┆ 0.8165 ┆ 0.239  ┆ 0.6547 ┆ … ┆ 0.9258 ┆ 0.6876 ┆ 0.9129 ┆ 0.6175 │
  │ 6   ┆ 0.7529 ┆ 0.0    ┆ 0.7303 ┆ … ┆ 1.0541 ┆ 0.6667 ┆ 0.7928 ┆ 0.6387 │
  │ 7   ┆ 0.9344 ┆ 1.0541 ┆ 0.6424 ┆ … ┆ 0.0    ┆ 1.0541 ┆ 1.1952 ┆ 0.978  │
  │ 8   ┆ 0.8224 ┆ 0.6667 ┆ 0.5578 ┆ … ┆ 1.0541 ┆ 0.0    ┆ 1.1282 ┆ 1.118  │
  │ 9   ┆ 0.6325 ┆ 0.7928 ┆ 1.0142 ┆ … ┆ 1.1952 ┆ 1.1282 ┆ 0.0    ┆ 0.9661 │
  │ 10  ┆ 1.0967 ┆ 0.6387 ┆ 1.0377 ┆ … ┆ 0.978  ┆ 1.118  ┆ 0.9661 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.7517 ┆ 0.7317 ┆ … ┆ 1.0299 ┆ 0.8331 ┆ 0.6854 ┆ 1.0795 │
  │ 2   ┆ 0.7517 ┆ 0.0    ┆ 0.7718 ┆ … ┆ 1.0912 ┆ 0.7463 ┆ 0.6602 ┆ 0.6289 │
  │ 3   ┆ 0.7317 ┆ 0.7718 ┆ 0.0    ┆ … ┆ 0.6748 ┆ 0.533  ┆ 1.0353 ┆ 1.0891 │
  │ 4   ┆ 0.7941 ┆ 1.0261 ┆ 0.8612 ┆ … ┆ 1.3093 ┆ 0.6515 ┆ 0.879  ┆ 1.4142 │
  │ 5   ┆ 0.8358 ┆ 0.3392 ┆ 0.6845 ┆ … ┆ 0.8695 ┆ 0.8238 ┆ 0.8574 ┆ 0.5947 │
  │ 6   ┆ 0.8124 ┆ 0.2066 ┆ 0.7484 ┆ … ┆ 0.9736 ┆ 0.8275 ┆ 0.7591 ┆ 0.5382 │
  │ 7   ┆ 1.0299 ┆ 1.0912 ┆ 0.6748 ┆ … ┆ 0.0    ┆ 1.0755 ┆ 1.2971 ┆ 1.0276 │
  │ 8   ┆ 0.8331 ┆ 0.7463 ┆ 0.533  ┆ … ┆ 1.0755 ┆ 0.0    ┆ 1.0515 ┆ 1.1804 │
  │ 9   ┆ 0.6854 ┆ 0.6602 ┆ 1.0353 ┆ … ┆ 1.2971 ┆ 1.0515 ┆ 0.0    ┆ 0.9102 │
  │ 10  ┆ 1.0795 ┆ 0.6289 ┆ 1.0891 ┆ … ┆ 1.0276 ┆ 1.1804 ┆ 0.9102 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.4358 ┆ 0.499  ┆ … ┆ 0.941  ┆ 0.5896 ┆ 0.7356 ┆ 0.9314 │
  │ 2   ┆ 0.4358 ┆ 0.0    ┆ 0.5619 ┆ … ┆ 1.0404 ┆ 0.7021 ┆ 0.8676 ┆ 0.6944 │
  │ 3   ┆ 0.499  ┆ 0.5619 ┆ 0.0    ┆ … ┆ 0.8209 ┆ 0.6788 ┆ 1.0546 ┆ 0.9941 │
  │ 4   ┆ 0.7428 ┆ 1.0321 ┆ 0.9235 ┆ … ┆ 1.2099 ┆ 0.627  ┆ 0.8213 ┆ 1.4142 │
  │ 5   ┆ 0.7158 ┆ 0.6291 ┆ 1.0048 ┆ … ┆ 1.3007 ┆ 0.8771 ┆ 0.5485 ┆ 0.7599 │
  │ 6   ┆ 0.9157 ┆ 0.6652 ┆ 0.9547 ┆ … ┆ 1.0215 ┆ 1.1832 ┆ 1.0171 ┆ 0.0866 │
  │ 7   ┆ 0.941  ┆ 1.0404 ┆ 0.8209 ┆ … ┆ 0.0    ┆ 1.1899 ┆ 1.1898 ┆ 1.0504 │
  │ 8   ┆ 0.5896 ┆ 0.7021 ┆ 0.6788 ┆ … ┆ 1.1899 ┆ 0.0    ┆ 1.0314 ┆ 1.1933 │
  │ 9   ┆ 0.7356 ┆ 0.8676 ┆ 1.0546 ┆ … ┆ 1.1898 ┆ 1.0314 ┆ 0.0    ┆ 0.9904 │
  │ 10  ┆ 0.9314 ┆ 0.6944 ┆ 0.9941 ┆ … ┆ 1.0504 ┆ 1.1933 ┆ 0.9904 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8581 ┆ 0.5118 ┆ … ┆ 1.2472 ┆ 1.0038 ┆ 0.7746 ┆ 0.3534 │
  │ 2   ┆ 0.8581 ┆ 0.0    ┆ 0.8498 ┆ … ┆ 0.8165 ┆ 0.9258 ┆ 0.7071 ┆ 0.7205 │
  │ 3   ┆ 0.5118 ┆ 0.8498 ┆ 0.0    ┆ … ┆ 1.1952 ┆ 0.8165 ┆ 1.0    ┆ 0.3506 │
  │ 4   ┆ 0.4082 ┆ 0.9636 ┆ 0.6583 ┆ … ┆ 1.4142 ┆ 1.1952 ┆ 1.0    ┆ 0.4539 │
  │ 5   ┆ 0.5774 ┆ 1.0142 ┆ 0.4472 ┆ … ┆ 1.4142 ┆ 1.0954 ┆ 1.1547 ┆ 0.4539 │
  │ 6   ┆ 0.6876 ┆ 1.2472 ┆ 0.6424 ┆ … ┆ 1.4142 ┆ 1.0541 ┆ 1.0954 ┆ 0.7646 │
  │ 7   ┆ 1.2472 ┆ 0.8165 ┆ 1.1952 ┆ … ┆ 0.0    ┆ 0.6325 ┆ 0.8165 ┆ 1.2247 │
  │ 8   ┆ 1.0038 ┆ 0.9258 ┆ 0.8165 ┆ … ┆ 0.6325 ┆ 0.0    ┆ 0.9258 ┆ 0.956  │
  │ 9   ┆ 0.7746 ┆ 0.7071 ┆ 1.0    ┆ … ┆ 0.8165 ┆ 0.9258 ┆ 0.0    ┆ 0.9101 │
  │ 10  ┆ 0.3534 ┆ 0.7205 ┆ 0.3506 ┆ … ┆ 1.2247 ┆ 0.956  ┆ 0.9101 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8881 ┆ 0.5792 ┆ … ┆ 1.2265 ┆ 0.9822 ┆ 0.8589 ┆ 0.3495 │
  │ 2   ┆ 0.8881 ┆ 0.0    ┆ 0.8004 ┆ … ┆ 0.6794 ┆ 0.8773 ┆ 0.6057 ┆ 0.9064 │
  │ 3   ┆ 0.5792 ┆ 0.8004 ┆ 0.0    ┆ … ┆ 1.1361 ┆ 0.7298 ┆ 1.0065 ┆ 0.477  │
  │ 4   ┆ 0.5161 ┆ 1.0394 ┆ 0.5879 ┆ … ┆ 1.4142 ┆ 1.1223 ┆ 1.1563 ┆ 0.2849 │
  │ 5   ┆ 0.7206 ┆ 1.137  ┆ 0.5181 ┆ … ┆ 1.4142 ┆ 1.0086 ┆ 1.2533 ┆ 0.5632 │
  │ 6   ┆ 0.6811 ┆ 1.2801 ┆ 0.7968 ┆ … ┆ 1.4142 ┆ 1.0238 ┆ 1.1259 ┆ 0.721  │
  │ 7   ┆ 1.2265 ┆ 0.6794 ┆ 1.1361 ┆ … ┆ 0.0    ┆ 0.7009 ┆ 0.6374 ┆ 1.3145 │
  │ 8   ┆ 0.9822 ┆ 0.8773 ┆ 0.7298 ┆ … ┆ 0.7009 ┆ 0.0    ┆ 0.8571 ┆ 1.0431 │
  │ 9   ┆ 0.8589 ┆ 0.6057 ┆ 1.0065 ┆ … ┆ 0.6374 ┆ 0.8571 ┆ 0.0    ┆ 1.0349 │
  │ 10  ┆ 0.3495 ┆ 0.9064 ┆ 0.477  ┆ … ┆ 1.3145 ┆ 1.0431 ┆ 1.0349 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8489 ┆ 0.9923 ┆ … ┆ 1.4142 ┆ 1.4142 ┆ 0.879  ┆ 0.3295 │
  │ 2   ┆ 0.8489 ┆ 0.0    ┆ 0.9511 ┆ … ┆ 0.8387 ┆ 0.8387 ┆ 0.674  ┆ 0.75   │
  │ 3   ┆ 0.9923 ┆ 0.9511 ┆ 0.0    ┆ … ┆ 1.1698 ┆ 1.1698 ┆ 1.2329 ┆ 0.9168 │
  │ 4   ┆ 0.6208 ┆ 0.9803 ┆ 0.6159 ┆ … ┆ 1.4142 ┆ 1.4142 ┆ 1.1991 ┆ 0.6073 │
  │ 5   ┆ 0.7849 ┆ 1.0649 ┆ 0.5344 ┆ … ┆ 1.4142 ┆ 1.4142 ┆ 1.2941 ┆ 0.7691 │
  │ 6   ┆ 0.7298 ┆ 1.1431 ┆ 0.9965 ┆ … ┆ 1.4142 ┆ 1.4142 ┆ 0.9258 ┆ 0.9017 │
  │ 7   ┆ 1.4142 ┆ 0.8387 ┆ 1.1698 ┆ … ┆ 0.0    ┆ 0.0    ┆ 1.0    ┆ 1.3642 │
  │ 8   ┆ 1.4142 ┆ 0.8387 ┆ 1.1698 ┆ … ┆ 0.0    ┆ 0.0    ┆ 1.0    ┆ 1.3642 │
  │ 9   ┆ 0.879  ┆ 0.674  ┆ 1.2329 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.9304 │
  │ 10  ┆ 0.3295 ┆ 0.75   ┆ 0.9168 ┆ … ┆ 1.3642 ┆ 1.3642 ┆ 0.9304 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ seq_1   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.0    ┆ 0.6325 │
  │ seq_2   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.6325 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0    ┆ 1.0    │
  │ seq_1   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.0    ┆ 0.7346 │
  │ seq_2   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.7346 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0   ┆ 1.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0   ┆ 1.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0   ┆ 1.0   │
  │ seq_1   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event]
  0.7529
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval]
  0.7517
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state]
  0.4358
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event]
  0.8581
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval]
  0.8881
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state]
  0.8489
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state]
  0.0
# ---
